techexper/templates/cloud-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: techxper-cloud
  name: techxper-cloud
  namespace: techxper
spec:
  selector:
    matchLabels:
      app: techxper-cloud
  template:
    metadata:
      labels:
        app: techxper-cloud
    spec:
      containers:
      - image: docker.io/sunandad2090/techexper:cloud2
        imagePullPolicy: Always
        name: techxper-cloud
        ports:
        - containerPort: 80
          protocol: TCP
      imagePullSecrets:
      - name: regcred
