techexper/templates/publish-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: techxper-publish
  name: techxper-publish
  namespace: techxper
spec:
  selector:
    matchLabels:
      app: techxper-publish
  template:
    metadata:
      labels:
        app: techxper-publish
    spec:
      containers:
      - image: docker.io/sunandad2090/techexper:publish50
        imagePullPolicy: Always
        name: techxper-publish
        ports:
        - containerPort: 3000
          protocol: TCP
      imagePullSecrets:
      - name: regcred
