techexper/templates/tutorial-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: techxper-tutorial
  name: techxper-tutorial
  namespace: techxper
spec:
  selector:
    matchLabels:
      app: techxper-tutorial
  template:
    metadata:
      labels:
        app: techxper-tutorial
    spec:
      containers:
      - image: docker.io/sunandad2090/techexper:tutorial2301
        imagePullPolicy: Always
        name: techxper-tutorial
        ports:
        - containerPort: 3000
          protocol: TCP
      imagePullSecrets:
      - name: regcred
