techexper/templates/api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: techxper-api
  namespace: techxper
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: techxper-api
  type: ClusterIP
