techexper/templates/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: techxper-app
  namespace: techxper
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 4200
  selector:
    app: techxper-app
  type: ClusterIP
