techexper/templates/cloud-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: techxper-cloud
  namespace: techxper
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: techxper-cloud
  type: ClusterIP
