techexper/templates/mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: techxper-mysql
  namespace: techxper
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: mysql
  type: ClusterIP
