techexper/templates/publish-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: techxper-publish
  namespace: techxper
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: techxper-publish
  type: ClusterIP
