techexper/templates/tutorial-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: techxper-tutorial
  namespace: techxper
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: techxper-tutorial
  type: ClusterIP
