techexper/templates/app-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
     cert-manager.io/cluster-issuer: yc-clusterissuer
     acme.cert-manager.io/http01-edit-in-place: "true"
  name: techxper-app
  namespace: techxper
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - techxper.in
    secretName: techxper-secret
  rules:
  - host: techxper.in
    http:
      paths:
      - backend:
          service:
            name: techxper-app
            port:
              number: 80
        path: /
        pathType: Prefix
