techexper/templates/cloud-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
     cert-manager.io/cluster-issuer: tx-clusterissuer
  name: techxper-cloud
  namespace: techxper
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - techxper.in
    secretName: techxper-secret
  rules:
  - host: techxper.in
    http:
      paths:
      - backend:
          service:
            name: techxper-cloud
            port:
              number: 80
        path: /
        pathType: Prefix
