techexper/templates/publish-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
     cert-manager.io/cluster-issuer: tx-clusterissuer
  name: techxper-publish
  namespace: techxper
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - publish.techxper.in
    secretName: publish-techxper-secret
  rules:
  - host: publish.techxper.in
    http:
      paths:
      - backend:
          service:
            name: techxper-publish
            port:
              number: 80
        path: /
        pathType: Prefix
