techexper/templates/tutorial-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
     cert-manager.io/cluster-issuer: tx-clusterissuer
  name: techxper-tutorial
  namespace: techxper
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - docs.techxper.in
    secretName: docs-techxper-secret
  rules:
  - host: docs.techxper.in
    http:
      paths:
      - backend:
          service:
            name: techxper-tutorial
            port:
              number: 80
        path: /
        pathType: Prefix
